# stanford-srp

./: CHANGES  INSTALL  Makefile.am  Makefile.in  README  README.NIS  README.WIN32  configure  configure.in  mkinstalldirs
base/: Makefile.am  Makefile.in  README  acconfig.h  config.h.in  configure  configure.in
base/etc/: Makefile.am  Makefile.in  limits  login.access  login.defs  login.defs.linux  suauth
base/lib/: Makefile.am  Makefile.in  commonio.c  commonio.h  defines.h  dialchk.c  dialup.c  dialup.h  encrypt.c  faillog.h  fputsx.c  getdef.c  getdef.h  getpass.c  grdbm.c  grent.c  groupio.c  grpack.c  gsdbm.c  gshadow.c  gshadow_.h  gspack.c  lastlog_.h  lockpw.c  md5.c  md5crypt.c  mkdir.c  port.c  port.h  prototypes.h  putgrent.c  putpwent.c  putspent.c  pwauth.c  pwauth.h  pwdbm.c  pwent.c  pwio.c  pwio.h  pwpack.c  (+20 more)
base/libmisc/: Makefile.am  Makefile.in  addgrps.c  age.c  basename.c  chkname.c  chowndir.c  chowntty.c  console.c  copydir.c  entry.c  env.c  failure.c  fields.c  hushed.c  isexpired.c  limits.c  list.c  log.c  login_access.c  login_desrpc.c  login_fbtab.c  login_krb.c  loginprompt.c  mail.c  motd.c  myname.c  obscure.c  pam_pass.c  pwd2spwd.c  rlogin.c  salt.c  setugid.c  setup.c  setupenv.c  shell.c  strtoday.c  suauth.c  sub.c  sulog.c  (+6 more)
base/pam_eps/: Makefile.in  Makefile.unix  README  README.pam-eps  README.rpm  eps_chkpwd.c  pam.conf.eps  pam.conf.migrate  pam_eps_auth.c  pam_eps_passwd.c  support.c
base/pam_eps/SOURCES/: pam-eps.patch
base/pam_eps/SPECS/: pam-eps.spec
base/src/: Makefile.am  Makefile.in  login.c  passwd.c  su.c
cast/: README  cast.c  cast.h
docs/: Acknowledgements  Copyrights  copyright.c  draft-altman-rfc2942bis-00.txt  draft-altman-rfc2944bis-01.txt  draft-altman-telnet-fwdx-02.txt  srp.ps
ftp/: Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
ftp/arpa/: Makefile.am  Makefile.in
ftp/ftp/: Makefile.am  Makefile.in  cmds.c  cmdtab.c  domacro.c  ftp.c  ftp_var.h  ftppath.c  getpass.c  glob.c  main.c  pclose.c  radix.c  ruserpass.c  secure.c  secure.h  srp.c
ftp/ftpd/: Makefile.am  Makefile.in  ftpcmd.c  ftpcmd.y  ftpd.c  getdtablesize.c  logwtmp.c  popen.c  setenv.c  srp.c  vers.c
inst/: INSTALL.EPS  INSTALL.SRP  ftp  ftpd  installeps  installsrp  login  passwd  su  tconf  telnet  telnetd
java/1.0.2/: security
java/1.1.x/security/srp/: PasswordEntryBox.java  PasswordFile.java  SRPClient.java  SRPServer.java  Util.java
java/Telnet/: CHANGES  CharDisplayTest.java  IOtest.java  Makefile  REVISION  appWrapper.java  frame.java  index.download.html  index.html  index.test.html  telnet.java
java/Telnet/Documentation/: index.html  user.html  whatis.telnet.html
java/Telnet/Documentation/Source/: AllNames.html  CharDisplayTest.html  IOtest.html  Package-display.html  Package-modules.html  Package-socket.html  appWrapper.html  display.CharDisplay.html  display.SoftFont.html  display.Terminal.html  display.TerminalHost.html  display.vt320.html  modules.ButtonBar.html  packages.html  (+12 more)
java/Telnet/display/: CharDisplay.java  SoftFont.java  Terminal.java  TerminalHost.java  vt320.java
java/Telnet/examples/: mg.html
java/Telnet/modules/: ButtonBar.java  Module.java  MudConnector.java  Script.java  TextLabel.java
java/Telnet/socket/: Authenticator.java  ErrorDialog.java  LoginBox.java  SRPAuthenticator.java  StatusPeer.java  TelnetIO.java
java/Telnet/tools/: mrelayd.c  proxy.java  relayd.c
javascript/: bigint.java  bigint.js  demo.html  index.html  sha1.js
libkrypto/: Makefile.am  Makefile.in  README  acconfig.h  cipher.c  cipher_bench.c  cipher_crypt_cbc.c  cipher_crypt_cfb.c  cipher_crypt_ecb.c  cipher_crypt_ofb.c  cipher_imp_blowfish.c  cipher_imp_blowfish.h  cipher_imp_cast.c  cipher_imp_cast.h  cipher_imp_des.c  cipher_imp_des.h  cipher_imp_none.c  cipher_test.c  config.h.in  configure  configure.in  hash.c  hash_imp_md5.c  hash_imp_md5.h  hash_imp_sha.c  hash_test.c  krypto.c  krypto.h  krypto_locl.h  krypto_rand_conf.c  krypto_test.c
libsrp/: Makefile.in  aclocal.m4  clitest.c  config.h.in  configure  getpwtest.c  makefile.win32.dep  nsswitch.c  nsw_tconf.c  nsw_tpasswd.c  rfc2945_client.c  rfc2945_server.c  srp.c  srp.h  srp6_client.c  srp6_server.c  srp6bench.c  srpbench.c  srptest.c  srvtest.c  t_client.c  t_getpass.c  t_pw.c  t_server.c  t_sha.c  t_sha.h  t_truerand.c  tconf.c  yp_misc.c  yp_tconf.c  yp_tpasswd.c
telnet/: Config.generic  Makefile.am  Makefile.in  Makefile.unix  README  README.TLS  acconfig.h  config.h.in  configure  configure.in
telnet/arpa/: Makefile.am  Makefile.in  telnet.h
telnet/libtelnet/: Makefile.am  Makefile.in  auth-proto.h  auth.c  auth.h  cast.c  cast.h  enc-proto.h  enc_cast.c  enc_des.c  enc_des_ede3.c  encrypt.c  encrypt.h  err.h  forward.c  genget.c  getent.c  getopt.c  kerberos.c  kerberos4c.c  kerberos5.c  krb4encpwd.c  localhost.c  mem.c  misc-proto.h  misc.c  misc.h  parsetos.c  read_password.c  rsaencpwd.c  setenv.c  spx.c  srp.c  strcasecmp.c  strchr.c  strdup.c  strerror.c  strftime.c  strrchr.c
telnet/telnet/: Makefile.am  Makefile.in  authenc.c  commands.c  externs.h  fwdxutil.c  fwdxutil.h  main.c  network.c  ring.c  sys_bsd.c  telnet.c  terminal.c  tlsutil.c  tlsutil.h  tn3270.c  utilities.c
telnet/telnetd/: Makefile.am  Makefile.in  Xauth.c  Xauth.h  XdmAuth.c  authenc.c  defs.h  ext.h  fwdxutil.c  fwdxutil.h  parsedpy.c  slc.c  state.c  sys_term.c  telnetd.c  telnetd.h  termstat.c  tls_dh.h  tlsutil.c  tlsutil.h  utility.c  x509_to_user.c
win32/: README  srp_gmp.dsw  srp_openssl.dsw  srp_tomcrypt.dsw  srp_tommath.dsw
win32/libkrypto_openssl/: cipher_bench.dsp  cipher_test.dsp  config.h  krypto.dsp  kryptostatic.dsp
win32/libkrypto_tomcrypt/: config.h  krypto.dsp  krypto_test.dsp
win32/libsrp_gmp/: config.h  srp.dsp  srp6bench.dsp  srpstatic.dsp
win32/libsrp_openssl/: config.h  srp.dsp  srp6bench.dsp  srpbench.dsp  srptest.dsp
win32/libsrp_tomcrypt/: config.h  srp.dsp
win32/libsrp_tommath/: config.h  srp.dsp  srpbench.dsp  srptest.dsp  tconf.dsp
win32/src/: getopt.c
(+15 files in other folders)
